<?xml version="1.0"?>
<package>
  <name>soth_test</name>
  <description>
  soth_test
  </description>
  <version>0.1.0</version>
    <author>Gianni Borghesan</author>
     <maintainer email="gianni.borghesan@kuleuven.be">Gianni Borghesan</maintainer>
 
  <license>EUPL v1.1</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>expressiongraph</build_depend>

  <build_depend>cmake_modules</build_depend>
   <run_depend>cmake_modules</run_depend> # this line was not described on the website
  <run_depend>expressiongraph</run_depend>

 

</package>
